--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,6 +1,10 @@
 ##	Libs subdirectory
 #	include here the libraries
 
+#	Graphics libraries
 add_subdirectory(glfw)
 add_subdirectory(glbinding)
 add_subdirectory(glm)
+
+#	CLI parser
+add_subdirectory(CLI11)
