--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ target_include_directories(Demo
 )
 target_link_libraries(Demo 
 	glfw glbinding::glbinding glm
-	CLI11 mINI
+	CLI11
 )
 target_sources(Demo
 	PRIVATE src/ext/stb_image.write.cpp
